Bug 760027 - Attempt to retry moving the installation directory when performing the replace stage of an update 10 times; r=strong

This will hopefully give the applications which might have a handle to some
file in that directory open a chance to close them up so that the replace
operation would finish successfully.